tests/unit-fail-compilation/j052a.c.ref
j052a.c:2:7: error: The left operand in a bitwise left-shift is negative.
  Undefined behavior (UB-CEB4).
   see C11 section 6.5.7:4 http://rvdoc.org/C11/6.5.7
   see C11 section J.2:1 item 52 http://rvdoc.org/C11/J.2
   see CERT-C section INT13-C http://rvdoc.org/CERT-C/INT13-C
   see CERT-C section MSC15-C http://rvdoc.org/CERT-C/MSC15-C
   see MISRA-C section 8.1:3 http://rvdoc.org/MISRA-C/8.1
Translation failed (config dumped). Run kcc -d -Werror -Wfatal-errors j052a.c to see commands run.
